--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,6 +5,7 @@
   <body>
 
     <h2 th:text="#{welcome}">Welcome</h2>
+    <h3>Tekton Rocks</h3>
     <div class="row">
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
