--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,6 +5,8 @@
   <body>
 
     <h2 th:text="#{welcome}">Welcome</h2>
+    <h2>OpenShift Pipelines</h2>
+    <h2>Pipelines-as-Code</h2>
     <div class="row">
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
